# trabalho-visao-computacional

./: .gitignore  README.md  classes_dataset.txt  config.yaml  main.py  pyproject.toml  teste_modelo.ipynb  teste_modelo_custom.ipynb  treino.py
runs/detect/transfer_ep100/yolo_transfer/: args.yaml  results.csv
runs/detect/transfer_ep30/yolo_transfer/: args.yaml  results.csv
