[project]
name = "trabalho-visao-computacional"
version = "0.1.0"
description = "Treinamento de um modelo para detecção de armas curtas e armas longas"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "cmake>=4.3.2",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.41",
    "wheel>=0.47.0",
]
